--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Transfer_learning/03_connect_with_other_layers/__pycache__
 /Transfer_learning/03_connect_with_other_layers/AlexNet/__pycache__
 /Transfer_learning/03_connect_with_other_layers/ResNet/__pycache__
+/GAN/DCGAN/model/__pycache__
