--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@
 /GAN/cDCGAN/Fashion-MNIST/samples/weights
 /GAN/cDCGAN/celebA/__pycache__
 /GAN/cDCGAN/celebA/model/__pycache__
+/GAN/cDCGAN/celebA/.idea
