--- a/.gitignore
+++ b/.gitignore
@@ -7,40 +7,6 @@
 
 /GAN/VanillaGAN/weights
 
-
-/.idea
-/GAN/.idea
-/GAN/DCGAN/.idea
-/GAN/DCGAN/CelebA/__pycache__
-/GAN/VanillaGAN/__pycache__
-/GAN/VanillaGAN/.idea
-/Transfer_learning/__pycache__
-/Transfer_learning/01_modify_last_FC_layer/__pycache__
-/Transfer_learning/02_delete_last_FC_layer/__pycache__
-/Transfer_learning/03_connect_with_other_layers/__pycache__
-/Transfer_learning/03_connect_with_other_layers/AlexNet/__pycache__
-/Transfer_learning/03_connect_with_other_layers/ResNet/__pycache__
-/GAN/DCGAN/model/__pycache__
-/GAN/cGAN/.idea
-/GAN/cGAN/MNIST/__pycache__
-/GAN/cGAN/MNIST/model/__pycache__
-/GAN/cGAN/MNIST/samples/weights
-/GAN/cDCGAN/.idea
-/GAN/cDCGAN/MNIST/__pycache__
-/GAN/cDCGAN/MNIST/model/__pycache__
-/GAN/cDCGAN/MNIST/samples/weights
-/GAN/cDCGAN/MNIST/.idea
-/GAN/cDCGAN/MNIST_noise/model/__pycache__
-/GAN/cDCGAN/MNIST_noise/samples/weights
-/GAN/cDCGAN/MNIST_noise/__pycache__
-/GAN/cDCGAN/MNIST_noise/.idea
-/GAN/cDCGAN/fashonMNIST/__pycache__
-/GAN/cDCGAN/fashonMNIST/model/__pycache__
-/GAN/cDCGAN/fashonMNIST/samples/weights
-/GAN/cDCGAN/Fashion-MNIST/__pycache__
-/GAN/cDCGAN/Fashion-MNIST/model/__pycache__
-/GAN/cDCGAN/Fashion-MNIST/samples/weights
-/GAN/cDCGAN/celebA/__pycache__
-/GAN/cDCGAN/celebA/model/__pycache__
-/GAN/cDCGAN/celebA/.idea
-/GAN/cDCGAN/Fashion-MNIST/.idea
+*.iml
+*.pyc
+*.xml
